syntax = "proto3";

package orderclient;

option go_package = "./order";

message CreateRequest {
  int64 uid = 1;
  int64 pid = 2;
  int64 amount = 3;
  int64 status = 4;
}
message CreateResponse {
  int64 id = 1;
}

message UpdateRequest {
  int64 id = 1;
  int64 uid = 2;
  int64 pid = 3;
  int64 amount = 4;
  int64 status = 5;
}
message UpdateResponse {

}

message RemoveRequest {
  int64 id = 1;
}
message RemoveResponse{

}

message DetailRequest {
  int64 id = 1;
}
message DetailResponse {
  int64 id = 1;
  int64 uid = 2;
  int64 pid = 3;
  int64 amount = 4;
  int64 status = 5;
}

message ListRequest {
  int64 uid = 1;
}
message ListItem {
  int64 id = 1;
  int64 uid = 2;
  int64 pid = 3;
  int64 amount = 4;
  int64 status = 5;
}
message ListResponse {
  repeated ListItem data = 1;
}

message PaidRequest {
  int64 id = 1;
}
message PaidResponse {
}

service Order {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc CreateRevert(CreateRequest) returns (CreateResponse);
  rpc Update(UpdateRequest) returns (UpdateResponse);
  rpc Remove(RemoveRequest) returns (RemoveResponse);
  rpc Detail(DetailRequest) returns (DetailResponse);
  rpc List(ListRequest) returns (ListResponse);
  rpc Paid(PaidRequest) returns(PaidResponse);
}

